[package]
name = "learn"
version = "0.1.0"
edition = "2024"
default-run = "ascii_gui"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25"
poll-promise = "0.3"
web-time = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = "0.35"
rfd = "0.17"
pollster = "0.4"
rayon = "1.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", default-features = false, features = [
  "Blob", "BlobPropertyBag", "Url", "MouseEvent", "Document", "Element", "Window",
  "HtmlCanvasElement", "HtmlInputElement", "HtmlVideoElement", "File", "FileList", "FileReader",
  "CanvasRenderingContext2d", "ImageData", "CssStyleDeclaration", "console",
] }
console_error_panic_hook = "0.1"
log = "0.4"
poll-promise = { version = "0.3", features = ["web"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
